infrastructure/ibmcloud-galasadev-cluster/galasa-development/javadoc-site/deployment.yaml
#
# Copyright contributors to the Galasa project 
# 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javadoc-site
  namespace: galasa-development
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: javadoc-site
  template:
    metadata:
      name: javadoc-site
      labels:
        app: javadoc-site
    spec:
      containers:
        - image: harbor.galasa.dev/galasadev/galasa-javadoc-site:main
          imagePullPolicy: Always
          name: javadoc-site
          ports:
            - containerPort: 80
              name: javadoc-site
