infrastructure/ibmcloud-galasadev-cluster/galasa-development/javadoc-site/service.yaml
#
# Copyright contributors to the Galasa project 
# 
apiVersion: v1
kind: Service
metadata:
  labels:
    app: javadoc-site
  name: javadoc-site
  namespace: galasa-development
spec:
  ports:
    - port: 80
  selector:
    app: javadoc-site
