infrastructure/ibmcloud-galasadev-cluster/galasa-development/javadoc-site/ingress.yaml
#
# Copyright contributors to the Galasa project 
# 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: javadoc-site
  namespace: galasa-development
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    
spec:
  tls:
  - hosts:
    - development.galasa.dev
    secretName: galasa-wildcard-cert
  rules:
  - host: development.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: javadoc-site
            port:
              number: 80
        path: main/javadoc-site
        pathType: Prefix
